# ticket-reservations-and-orders

./: .env.example  .gitignore  .golangci.yaml  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
api/: openapi.yaml
cmd/api/: BUILD.bazel  main.go
cmd/expiry-worker/: BUILD.bazel  main.go
cmd/outbox-publisher/: BUILD.bazel  main.go
deploy/: docker-compose.yml  otel-collector-config.yml
internal/adapters/crdb/: BUILD.bazel  outbox.go  repo.go  repo_test.go
internal/adapters/mongo/: BUILD.bazel  audit.go  catalog.go
internal/adapters/rabbit/: BUILD.bazel  consumer.go  publisher.go
internal/adapters/redis/: BUILD.bazel  cache.go  idempotency.go
internal/config/: BUILD.bazel  config.go
internal/domain/: BUILD.bazel  entities.go  errors.go  order.go  reservation.go
internal/http/: BUILD.bazel  handlers.go  middleware.go  router.go
internal/idempotency/: BUILD.bazel  idempotency.go
internal/observability/: BUILD.bazel  logger.go  metrics.go  otel.go
internal/outbox/: BUILD.bazel  publisher.go
internal/rateLimit/: BUILD.bazel  ratelimit.go
load/: load_test.js
migrations/crdb/: 0001_initial.sql
test/integration/: tro_test.go
