load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/cmd/api",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/http",
        "//internal/observability",
        "@com_github_go_chi_chi_v5//:chi",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)

load("@rules_oci//oci:defs.bzl", "oci_image")

oci_image(
    name = "api_image",
    base = "@distroless_base",
    cmd = ["//cmd/api:api"],
    entrypoint = ["/api"],
)