load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/cmd/api",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/adapters/crdb",
        "//internal/adapters/mongo",
        "//internal/adapters/rabbit",
        "//internal/adapters/redis",
        "//internal/config",
        "//internal/http",
        "//internal/idempotency",
        "//internal/observability",
        "//internal/rateLimit",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)