load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/cmd/api",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/adapters/crdb",
        "//internal/adapters/mongo",
        "//internal/adapters/rabbit",
        "//internal/adapters/redis",
        "//internal/config",
        "//internal/http",
        "//internal/idempotency",
        "//internal/observability",
        "//internal/rateLimit",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)