load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "expiry_worker_lib",
    srcs = ["main.go"],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/cmd/expiry-worker",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/adapters/crdb",
        "//internal/adapters/rabbit",
        "//internal/adapters/redis",
        "//internal/observability",
        "//internal/domain",
    ],
)

go_binary(
    name = "expiry_worker",
    embed = [":expiry_worker_lib"],
    visibility = ["//visibility:public"],
)