load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "outbox_publisher_lib",
    srcs = ["main.go"],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/cmd/outbox-publisher",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/outbox",
    ],
)

go_binary(
    name = "outbox_publisher",
    embed = [":outbox_publisher_lib"],
    visibility = ["//visibility:public"],
)

load("@rules_oci//oci:defs.bzl", "oci_image")

oci_image(
    name = "outbox_publisher_image",
    base = "@distroless_base",
    cmd = ["//cmd/outbox-publisher:outbox_publisher"],
    entrypoint = ["/outbox_publisher"],
)