load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "outbox_publisher_lib",
    srcs = ["main.go"],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/cmd/outbox-publisher",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/adapters/crdb",
        "//internal/adapters/rabbit",
        "//internal/config",
        "//internal/observability",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
    ],
)

go_binary(
    name = "outbox_publisher",
    embed = [":outbox_publisher_lib"],
    visibility = ["//visibility:public"],
)