load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "outbox_publisher_lib",
    srcs = ["main.go"],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/cmd/outbox-publisher",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/adapters/crdb",
        "//internal/adapters/rabbit",
        "//internal/config",
        "//internal/observability",
    ],
)

go_binary(
    name = "outbox_publisher",
    embed = [":outbox_publisher_lib"],
    visibility = ["//visibility:public"],
)