load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "entities.go",
        "errors.go",
        "order.go",
        "reservation.go",
    ],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/domain",
    visibility = ["//:__subpackages__"],
)