load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = [
        "handlers.go",
        "middleware.go",
        "router.go",
    ],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/http",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/domain",
        "//internal/idempotency",
    ],
)