load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "observability",
    srcs = [
        "logger.go",
        "metrics.go",
        "otel.go",
    ],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/observability",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_sirupsen_logrus//:logrus",
        "@go_opentelemetry_io_otel//:otel",
        "@go_opentelemetry_io_otel//exporters/otlp/otlptrace/otlptracegrpc",
        "@go_opentelemetry_io_otel//sdk/trace",
        "@org_golang_x_sync//errgroup",
    ],
)