load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "observability",
    srcs = [
        "logger.go",
        "metrics.go",
        "otel.go",
    ],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/observability",
    visibility = ["//:__subpackages__"],
    deps = [
    ],
)