load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "outbox",
    srcs = ["publisher.go"],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/outbox",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/adapters/crdb",
        "//internal/adapters/rabbit",
    ],
)