# Path: internal/rateLimit/BUILD.bazel
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rateLimit",
    srcs = ["ratelimit.go"],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/rateLimit",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/adapters/redis"],
)