load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crdb",
    srcs = [
        "outbox.go",
        "repo.go",
    ],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/adapters/crdb",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/domain",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgtype",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "crdb_test",
    srcs = ["repo_test.go"],
    embed = [":crdb"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go_modules_postgres//:postgres",
    ],
)