load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crdb",
    srcs = [
        "outbox.go",
        "repo.go",
    ],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/adapters/crdb",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/domain",
    ],
)

go_test(
    name = "crdb_test",
    srcs = ["repo_test.go"],
    embed = [":crdb"],
    deps = [
    ],
)