load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mongo",
    srcs = [
        "audit.go",
        "catalog.go",
    ],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/adapters/mongo",
    visibility = ["//:__subpackages__"],
    deps = [
    ],
)