load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rabbit",
    srcs = [
        "consumer.go",
        "publisher.go",
    ],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/adapters/rabbit",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
    ],
)