load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "redis",
    srcs = [
        "cache.go",
        "idempotency.go",
    ],
    importpath = "github.com/robertarktes/ticket-reservations-and-orders/internal/adapters/redis",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)